fixing history tab work item button text align issue

--- a/RetrospectiveExtension.Frontend/css/boardSummary.scss
+++ b/RetrospectiveExtension.Frontend/css/boardSummary.scss
@@ -213,6 +213,7 @@
 
             .work-item-title {
               cursor: pointer;
+              text-align: start;
             }
 
             .no-action-items {
